# gocqapi

./: .gitignore  README.md  pyproject.toml
gocqapi/: _api.py  group_manage.py  info.py  message.py  models.py  self_manage.py
