[tool.poetry]
name = "gocqapi"
version = "0.1.0"
description = "go-cqhttp API typing annoations, return data models and utils for nonebot"
authors = ["风屿 <i@windis.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.3, <3.10"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
